feat: improve Appointments and PatientDetail pages with i18n
- Add doctor assignment to appointments (dropdown, table column)
- Add comprehensive translations for appointments (EN/FR)
- Rewrite PatientDetail with modern card-based UI
- Add patient info cards (personal, contact, medical)
- Add quick actions (visits, appointments, prescriptions)
- Display upcoming appointments on patient detail
- Add age calculation and gender badges
- Consistent styling with CSS variables

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -82,7 +82,24 @@
     "patientCode": "Code",
     "name": "Name",
     "lastVisit": "Last Visit",
-    "nextVisit": "Next Visit"
+    "nextVisit": "Next Visit",
+    "patientDetails": "Patient Details",
+    "editPatient": "Edit Patient",
+    "personalInformation": "Personal Information",
+    "contactInformation": "Contact Information",
+    "medicalInfo": "Medical Information",
+    "age": "Age",
+    "years": "years",
+    "quickActions": "Quick Actions",
+    "viewVisits": "View Visits",
+    "newAppointment": "New Appointment",
+    "createPrescription": "Create Prescription",
+    "recentActivity": "Recent Activity",
+    "upcomingAppointments": "Upcoming Appointments",
+    "noUpcomingAppointments": "No upcoming appointments",
+    "loadError": "Failed to load patient details.",
+    "updateSuccess": "Patient updated successfully.",
+    "updateError": "Failed to update patient."
   },
   "visits": {
     "title": "Visits",
@@ -293,8 +310,12 @@
   },
   "appointments": {
     "title": "Appointments",
+    "subtitle": "Scheduling + daily agenda (CRUD)",
     "newAppointment": "New Appointment",
+    "createAppointment": "Create appointment",
+    "editAppointment": "Edit Appointment",
     "schedule": "Schedule",
+    "scheduledAt": "Scheduled at",
     "date": "Date",
     "time": "Time",
     "status": "Status",
@@ -302,7 +323,31 @@
     "confirmed": "Confirmed",
     "cancelled": "Cancelled",
     "completed": "Completed",
-    "reason": "Reason"
+    "noShow": "No-show",
+    "reason": "Reason",
+    "notes": "Notes",
+    "patient": "Patient",
+    "selectPatient": "Select patient...",
+    "allPatients": "All patients",
+    "filterByPatient": "Filter by patient",
+    "filterByStatus": "Filter by status",
+    "allStatuses": "All statuses",
+    "upcomingOnly": "Upcoming only",
+    "linkToVisit": "Link to Visit (optional)",
+    "visitIdOptional": "Visit ID (optional)",
+    "backendRejectsPast": "Note: backend rejects past times for Scheduled/Confirmed.",
+    "noAppointments": "No appointments found.",
+    "appointmentNumber": "Appointment #{{id}}",
+    "deleteConfirm": "Delete this appointment?",
+    "endpointFailed": "Appointments endpoint failed. Check backend route: /api/appointments/",
+    "createFailed": "Create failed.",
+    "updateFailed": "Update failed.",
+    "deleteFailed": "Delete failed.",
+    "selectPatientError": "Please select a patient.",
+    "doctor": "Doctor",
+    "selectDoctor": "Select doctor...",
+    "allDoctors": "All doctors",
+    "filterByDoctor": "Filter by doctor"
   },
   "language": {
     "select": "Language",
