--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -82,7 +82,24 @@
     "patientCode": "Code",
     "name": "Nom",
     "lastVisit": "Dernière visite",
-    "nextVisit": "Prochaine visite"
+    "nextVisit": "Prochaine visite",
+    "patientDetails": "Détails du patient",
+    "editPatient": "Modifier le patient",
+    "personalInformation": "Informations personnelles",
+    "contactInformation": "Coordonnées",
+    "medicalInfo": "Informations médicales",
+    "age": "Âge",
+    "years": "ans",
+    "quickActions": "Actions rapides",
+    "viewVisits": "Voir les visites",
+    "newAppointment": "Nouveau rendez-vous",
+    "createPrescription": "Créer une ordonnance",
+    "recentActivity": "Activité récente",
+    "upcomingAppointments": "Rendez-vous à venir",
+    "noUpcomingAppointments": "Aucun rendez-vous à venir",
+    "loadError": "Échec du chargement des détails du patient.",
+    "updateSuccess": "Patient mis à jour avec succès.",
+    "updateError": "Échec de la mise à jour du patient."
   },
   "visits": {
     "title": "Visites",
@@ -293,8 +310,12 @@
   },
   "appointments": {
     "title": "Rendez-vous",
+    "subtitle": "Planification + agenda quotidien (CRUD)",
     "newAppointment": "Nouveau rendez-vous",
+    "createAppointment": "Créer un rendez-vous",
+    "editAppointment": "Modifier le rendez-vous",
     "schedule": "Planification",
+    "scheduledAt": "Prévu à",
     "date": "Date",
     "time": "Heure",
     "status": "Statut",
@@ -302,7 +323,31 @@
     "confirmed": "Confirmé",
     "cancelled": "Annulé",
     "completed": "Terminé",
-    "reason": "Motif"
+    "noShow": "Absent",
+    "reason": "Motif",
+    "notes": "Notes",
+    "patient": "Patient",
+    "selectPatient": "Sélectionner un patient...",
+    "allPatients": "Tous les patients",
+    "filterByPatient": "Filtrer par patient",
+    "filterByStatus": "Filtrer par statut",
+    "allStatuses": "Tous les statuts",
+    "upcomingOnly": "À venir uniquement",
+    "linkToVisit": "Lier à une visite (optionnel)",
+    "visitIdOptional": "ID de visite (optionnel)",
+    "backendRejectsPast": "Note : le serveur rejette les horaires passés pour Planifié/Confirmé.",
+    "noAppointments": "Aucun rendez-vous trouvé.",
+    "appointmentNumber": "Rendez-vous #{{id}}",
+    "deleteConfirm": "Supprimer ce rendez-vous ?",
+    "endpointFailed": "Échec de l'endpoint rendez-vous. Vérifiez la route backend : /api/appointments/",
+    "createFailed": "Échec de la création.",
+    "updateFailed": "Échec de la mise à jour.",
+    "deleteFailed": "Échec de la suppression.",
+    "selectPatientError": "Veuillez sélectionner un patient.",
+    "doctor": "Médecin",
+    "selectDoctor": "Sélectionner un médecin...",
+    "allDoctors": "Tous les médecins",
+    "filterByDoctor": "Filtrer par médecin"
   },
   "language": {
     "select": "Langue",
