feat: add visit fields, prescription permissions, and PDF updates
- Add medical_history, complementary_exam, and treatment fields to visit form
- Add doctor-only permission for prescription creation
- Update prescription PDF format with doctor info at top left (French only)
- Improve error messages for permission denied

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -147,14 +147,20 @@
     "followUp": "Follow-up",
     "visitDateOptional": "Visit date/time (optional - leave empty for now)",
     "chiefComplaintPlaceholder": "Example: Fever and cough",
+    "medicalHistory": "Medical History",
+    "medicalHistoryPlaceholder": "Example: Diabetes, hypertension, previous surgeries...",
     "historyOfPresentIllness": "History of Present Illness",
     "hpiPlaceholder": "Example: Fever for 2 days, cough, mild headache...",
     "physicalExam": "Physical Exam",
     "physicalExamPlaceholder": "Example: Temp elevated, throat red...",
+    "complementaryExam": "Complementary Exam",
+    "complementaryExamPlaceholder": "Example: Lab results, imaging findings...",
     "assessment": "Assessment",
     "assessmentPlaceholder": "Example: Suspected upper respiratory infection...",
     "plan": "Plan",
     "planPlaceholder": "Example: CBC + malaria test, start symptomatic treatment...",
+    "treatment": "Treatment",
+    "treatmentPlaceholder": "Example: Amoxicillin 500mg TID x 7 days...",
     "notesPlaceholder": "Optional notes",
     "createVisit": "Create visit",
     "visitHistory": "Visit history",
@@ -254,7 +260,7 @@
     "visitColumn": "Visit",
     "created": "Created",
     "printPdf": "Print / PDF",
-    "note": "Note: patient/visit names depend on what your backend returns in the prescriptions list serializer.",
+    "note": "",
     "loadTemplatesError": "Failed to load templates.",
     "loadTemplateDetailError": "Failed to load template detail.",
     "loadError": "Failed to load saved prescriptions.",
@@ -262,7 +268,8 @@
     "selectTemplateError": "Please select a template.",
     "noTemplateItemsError": "This template has no items. Add items in admin first.",
     "createSuccess": "Saved. Prescription #{{id}}",
-    "createError": "Save failed. Check backend validation and visit ID.",
+    "createError": "Save failed. Please try again.",
+    "permissionError": "Only doctors can create prescriptions.",
     "pdfError": "Failed to download PDF. Please try again.",
     "deleteSuccess": "Prescription deleted successfully.",
     "deleteError": "Failed to delete prescription. Please try again.",
