--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -147,14 +147,20 @@
     "followUp": "Suivi",
     "visitDateOptional": "Date/heure de visite (optionnel - laisser vide pour maintenant)",
     "chiefComplaintPlaceholder": "Exemple : Fièvre et toux",
+    "medicalHistory": "Antécédents médicaux",
+    "medicalHistoryPlaceholder": "Exemple : Diabète, hypertension, chirurgies antérieures...",
     "historyOfPresentIllness": "Histoire de la maladie actuelle",
     "hpiPlaceholder": "Exemple : Fièvre depuis 2 jours, toux, léger mal de tête...",
     "physicalExam": "Examen physique",
     "physicalExamPlaceholder": "Exemple : Température élevée, gorge rouge...",
+    "complementaryExam": "Examen complémentaire",
+    "complementaryExamPlaceholder": "Exemple : Résultats de laboratoire, imagerie...",
     "assessment": "Évaluation",
     "assessmentPlaceholder": "Exemple : Suspicion d'infection respiratoire haute...",
     "plan": "Plan",
     "planPlaceholder": "Exemple : NFS + test paludisme, commencer traitement symptomatique...",
+    "treatment": "Traitement",
+    "treatmentPlaceholder": "Exemple : Amoxicilline 500mg 3x/jour x 7 jours...",
     "notesPlaceholder": "Notes optionnelles",
     "createVisit": "Créer la visite",
     "visitHistory": "Historique des visites",
@@ -254,7 +260,7 @@
     "visitColumn": "Visite",
     "created": "Créée",
     "printPdf": "Imprimer / PDF",
-    "note": "Note : les noms des patients/visites dépendent de ce que votre backend renvoie dans le sérialiseur.",
+    "note": "",
     "loadTemplatesError": "Échec du chargement des modèles.",
     "loadTemplateDetailError": "Échec du chargement des détails du modèle.",
     "loadError": "Échec du chargement des ordonnances enregistrées.",
@@ -262,7 +268,8 @@
     "selectTemplateError": "Veuillez sélectionner un modèle.",
     "noTemplateItemsError": "Ce modèle n'a pas d'éléments. Ajoutez des éléments dans l'admin d'abord.",
     "createSuccess": "Enregistrée. Ordonnance #{{id}}",
-    "createError": "Échec de l'enregistrement. Vérifiez la validation backend et l'ID de visite.",
+    "createError": "Échec de l'enregistrement. Veuillez réessayer.",
+    "permissionError": "Seuls les médecins peuvent créer des ordonnances.",
     "pdfError": "Échec du téléchargement du PDF. Veuillez réessayer.",
     "deleteSuccess": "Ordonnance supprimée avec succès.",
     "deleteError": "Échec de la suppression de l'ordonnance. Veuillez réessayer.",
