feat: add reminder toggle button for appointments

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -383,7 +383,10 @@
     "nextMonth": "Suivant",
     "appointment": "rendez-vous",
     "appointmentsPlural": "rendez-vous",
-    "noAppointmentsOnDay": "Aucun rendez-vous ce jour"
+    "noAppointmentsOnDay": "Aucun rendez-vous ce jour",
+    "reminderOn": "Rappel : ON",
+    "reminderOff": "Rappel : OFF",
+    "reminderToggleFailed": "Impossible de modifier le rappel. Veuillez réessayer."
   },
   "language": {
     "select": "Langue",
