--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -383,7 +383,10 @@
     "nextMonth": "Next",
     "appointment": "appointment",
     "appointmentsPlural": "appointments",
-    "noAppointmentsOnDay": "No appointments on this day"
+    "noAppointmentsOnDay": "No appointments on this day",
+    "reminderOn": "Reminder: ON",
+    "reminderOff": "Reminder: OFF",
+    "reminderToggleFailed": "Failed to toggle reminder. Please try again."
   },
   "language": {
     "select": "Language",
