Improve workflow: vital parameters placement + patient sorting/search + i18n

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -59,7 +59,7 @@
     "statsPlaceholder": "Dashboard statistics and analytics will appear here once you start adding data.",
     "openModule": "Open module",
     "patientsDesc": "Manage patient records, demographics, and medical history",
-    "visitsDesc": "Track consultations, vitals, and clinical notes",
+    "visitsDesc": "Track consultations, vital parameters, and clinical notes",
     "prescriptionsDesc": "Create and manage medication prescriptions",
     "appointmentsDesc": "Schedule and manage patient appointments"
   },
@@ -117,7 +117,7 @@
     "title": "Visits",
     "newVisit": "New Visit",
     "visitDetails": "Visit Details",
-    "vitals": "Vitals",
+    "vitals": "Vital Parameters",
     "notes": "Notes",
     "diagnosis": "Diagnosis",
     "chiefComplaint": "Chief Complaint",
@@ -168,12 +168,12 @@
     "createVisit": "Create visit",
     "visitHistory": "Visit history",
     "noVisits": "No visits yet.",
-    "clickRowTip": "Tip: click a row to open visit details + vitals.",
+    "clickRowTip": "Tip: click a row to open visit details + vital parameters.",
     "date": "Date",
     "type": "Type",
-    "vitalsLatest": "Vitals (latest)",
+    "vitalsLatest": "Vital parameters (latest)",
     "openVisit": "Open visit",
-    "vitalsRecorded": "Vitals recorded"
+    "vitalsRecorded": "Vital parameters recorded"
   },
   "visitDetail": {
     "backToVisits": "Back to visits",
@@ -186,8 +186,8 @@
     "loadError": "Failed to load visit details. Please try again.",
     "updateSuccess": "Visit updated successfully.",
     "updateError": "Failed to update visit. Please try again.",
-    "vitalsSuccess": "Vitals saved successfully.",
-    "vitalsError": "Failed to save vitals. Please try again.",
+    "vitalsSuccess": "Vital parameters saved successfully.",
+    "vitalsError": "Failed to save vital parameters. Please try again.",
     "pdfError": "Failed to download PDF. Please try again.",
     "rxLoadError": "Failed to load prescriptions for this visit.",
     "prescriptionCount": "{{count}} prescription(s)",
@@ -197,9 +197,9 @@
     "downloadPdf": "Download PDF",
     "downloading": "Downloading...",
     "latest": "Latest",
-    "noVitalsRecorded": "No vitals recorded",
-    "addVitals": "Add vitals",
-    "noVitalsYet": "No vital signs yet. Add vitals to start tracking this visit.",
+    "noVitalsRecorded": "No vital parameters recorded",
+    "addVitals": "Add vital parameters",
+    "noVitalsYet": "No vital parameters yet. Add vital parameters to start tracking this visit.",
     "respRate": "Resp. rate",
     "headCircumference": "Head circumference",
     "measuredAt": "Measured at (optional)",
@@ -212,18 +212,20 @@
     "heartRateBpm": "Heart rate (bpm)",
     "respRateRpm": "Resp rate (rpm)",
     "headCircumferenceCm": "Head circumference (cm)",
-    "saveVitals": "Save vitals",
-    "vitalsHistory": "Vitals history",
+    "saveVitals": "Save vital parameters",
+    "vitalsHistory": "Vital parameters history",
     "recordCount": "{{count}} record(s)",
-    "noVitalsRecordedYet": "No vitals recorded yet.",
+    "noVitalsRecordedYet": "No vital parameters recorded yet.",
     "measured": "Measured",
     "temp": "Temp",
     "showingLatest8": "Showing latest 8 records.",
     "printSummary": "Print Summary",
     "summaryPdfError": "Failed to download visit summary. Please try again.",
-    "editVitals": "Edit vital signs",
-    "vitalsUpdateSuccess": "Vital signs updated successfully.",
-    "vitalsUpdateError": "Failed to update vital signs. Please try again."
+    "editVitals": "Edit vital parameters",
+    "vitalsUpdateSuccess": "Vital parameters updated successfully.",
+    "vitalsUpdateError": "Failed to update vital parameters. Please try again.",
+    "visitInformation": "Visit Information",
+    "clinicalExam": "Clinical Examination"
   },
   "prescriptions": {
     "title": "Prescriptions",
