--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -59,7 +59,7 @@
     "statsPlaceholder": "Les statistiques et analyses du tableau de bord apparaîtront ici une fois que vous aurez ajouté des données.",
     "openModule": "Ouvrir le module",
     "patientsDesc": "Gérer les dossiers patients, les données démographiques et les antécédents médicaux",
-    "visitsDesc": "Suivre les consultations, les signes vitaux et les notes cliniques",
+    "visitsDesc": "Suivre les consultations, les paramètres vitaux et les notes cliniques",
     "prescriptionsDesc": "Créer et gérer les ordonnances de médicaments",
     "appointmentsDesc": "Planifier et gérer les rendez-vous des patients"
   },
@@ -117,7 +117,7 @@
     "title": "Visites",
     "newVisit": "Nouvelle visite",
     "visitDetails": "Détails de la visite",
-    "vitals": "Signes vitaux",
+    "vitals": "Paramètres vitaux",
     "notes": "Notes",
     "diagnosis": "Diagnostic",
     "chiefComplaint": "Motif de consultation",
@@ -168,12 +168,12 @@
     "createVisit": "Créer la visite",
     "visitHistory": "Historique des visites",
     "noVisits": "Aucune visite pour le moment.",
-    "clickRowTip": "Astuce : cliquez sur une ligne pour ouvrir les détails de la visite + signes vitaux.",
+    "clickRowTip": "Astuce : cliquez sur une ligne pour ouvrir les détails de la visite + paramètres vitaux.",
     "date": "Date",
     "type": "Type",
-    "vitalsLatest": "Signes vitaux (derniers)",
+    "vitalsLatest": "Paramètres vitaux (derniers)",
     "openVisit": "Ouvrir la visite",
-    "vitalsRecorded": "Signes vitaux enregistrés"
+    "vitalsRecorded": "Paramètres vitaux enregistrés"
   },
   "visitDetail": {
     "backToVisits": "Retour aux visites",
@@ -186,8 +186,8 @@
     "loadError": "Échec du chargement des détails de la visite. Veuillez réessayer.",
     "updateSuccess": "Visite mise à jour avec succès.",
     "updateError": "Échec de la mise à jour de la visite. Veuillez réessayer.",
-    "vitalsSuccess": "Signes vitaux enregistrés avec succès.",
-    "vitalsError": "Échec de l'enregistrement des signes vitaux. Veuillez réessayer.",
+    "vitalsSuccess": "Paramètres vitaux enregistrés avec succès.",
+    "vitalsError": "Échec de l'enregistrement des paramètres vitaux. Veuillez réessayer.",
     "pdfError": "Échec du téléchargement du PDF. Veuillez réessayer.",
     "rxLoadError": "Échec du chargement des ordonnances pour cette visite.",
     "prescriptionCount": "{{count}} ordonnance(s)",
@@ -197,9 +197,9 @@
     "downloadPdf": "Télécharger PDF",
     "downloading": "Téléchargement...",
     "latest": "Derniers",
-    "noVitalsRecorded": "Aucun signe vital enregistré",
-    "addVitals": "Ajouter signes vitaux",
-    "noVitalsYet": "Aucun signe vital pour le moment. Ajoutez des signes vitaux pour commencer le suivi.",
+    "noVitalsRecorded": "Aucun paramètre vital enregistré",
+    "addVitals": "Ajouter paramètres vitaux",
+    "noVitalsYet": "Aucun paramètre vital pour le moment. Ajoutez des paramètres vitaux pour commencer le suivi.",
     "respRate": "Fréq. resp.",
     "headCircumference": "Périmètre crânien",
     "measuredAt": "Mesuré à (optionnel)",
@@ -212,18 +212,20 @@
     "heartRateBpm": "Fréq. cardiaque (bpm)",
     "respRateRpm": "Fréq. resp. (rpm)",
     "headCircumferenceCm": "Périmètre crânien (cm)",
-    "saveVitals": "Enregistrer signes vitaux",
-    "vitalsHistory": "Historique des signes vitaux",
+    "saveVitals": "Enregistrer paramètres vitaux",
+    "vitalsHistory": "Historique des paramètres vitaux",
     "recordCount": "{{count}} enregistrement(s)",
-    "noVitalsRecordedYet": "Aucun signe vital enregistré.",
+    "noVitalsRecordedYet": "Aucun paramètre vital enregistré.",
     "measured": "Mesuré",
     "temp": "Temp",
     "showingLatest8": "Affichage des 8 derniers enregistrements.",
     "printSummary": "Imprimer résumé",
     "summaryPdfError": "Échec du téléchargement du résumé de visite. Veuillez réessayer.",
-    "editVitals": "Modifier les signes vitaux",
-    "vitalsUpdateSuccess": "Signes vitaux mis à jour avec succès.",
-    "vitalsUpdateError": "Échec de la mise à jour des signes vitaux. Veuillez réessayer."
+    "editVitals": "Modifier les paramètres vitaux",
+    "vitalsUpdateSuccess": "Paramètres vitaux mis à jour avec succès.",
+    "vitalsUpdateError": "Échec de la mise à jour des paramètres vitaux. Veuillez réessayer.",
+    "visitInformation": "Informations de visite",
+    "clinicalExam": "Examen clinique"
   },
   "prescriptions": {
     "title": "Ordonnances",
