Add BMI (IMC) auto-calculation in vital signs + translations

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -209,6 +209,11 @@
     "oxygenSat": "Oxygen sat (%)",
     "weightKg": "Weight (kg)",
     "heightCm": "Height (cm)",
+    "bmi": "BMI (IMC)",
+    "bmiUnderweight": "Underweight",
+    "bmiNormal": "Normal",
+    "bmiOverweight": "Overweight",
+    "bmiObese": "Obese",
     "bpSystolic": "BP systolic",
     "bpDiastolic": "BP diastolic",
     "heartRateBpm": "Heart rate (bpm)",
