--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -209,6 +209,11 @@
     "oxygenSat": "Sat. oxygène (%)",
     "weightKg": "Poids (kg)",
     "heightCm": "Taille (cm)",
+    "bmi": "IMC (BMI)",
+    "bmiUnderweight": "Insuffisance pondérale",
+    "bmiNormal": "Normal",
+    "bmiOverweight": "Surpoids",
+    "bmiObese": "Obésité",
     "bpSystolic": "TA systolique",
     "bpDiastolic": "TA diastolique",
     "heartRateBpm": "Fréq. cardiaque (bpm)",
